# qwen3-tts_voice_clone

./: .env.example  .gitignore  Agents.md  README.md  README_QWEN3TTS.md  pyproject.toml  recorder.py  requirements.txt  run_tts_test.py  setup.py  template_tokenizer.py  template_voice_clone.py  template_voice_design.py  template_voice_design_then_clone.py  voice_clone_app.py  voice_clone_from_file.py  voice_clone_notebook.ipynb
scripts/: clone_from_file.py  recorder.py
scripts/templates/: custom_voice.py  voice_clone.py  voice_design.py  voice_design_then_clone.py
src/: __init__.py  api_server.py  app.py  audio_utils.py  config.py  engine.py
tests/: test_api_server.py  test_audio_utils.py  test_config.py  test_engine.py
