[project]
name = "qwen3-tts-voice-clone"
version = "0.2.0"
description = "Voice cloning tools using Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "qwen-tts",
    "torch",
    "torchaudio",
    "soundfile",
    "numpy",
    "gradio",
    "transformers==4.57.3",
    "huggingface-hub<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
notebook = [
    "ipykernel",
    "ipywidgets",
]
flash = [
    "flash-attn",
]
whisper = [
    "openai-whisper",
]

[project.scripts]
qwen-tts-app = "src.app:main"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
